Update portfolio title and content to Tristan

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portfolio — Votre Nom</title>
+  <!-- Title updated to use Tristan -->
+  <title>Portfolio — Tristan</title>
   <meta name="description" content="Portfolio — projets, bio et contacts." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,8 +27,9 @@
 
   <main id="top">
     <section class="hero container">
-      <h1>Bonjour, je suis <span class="accent">Votre Nom</span>.</h1>
-      <p class="lead">Journaliste & enseignant — cultures numériques. J'analyse les usages, les médias et l'IA.</p>
+      <!-- Name updated to Tristan -->
+      <h1>Bonjour, je suis <span class="accent">Tristan</span>.</h1>
+      <p class="lead">Journaliste &amp; enseignant — cultures numériques. J'analyse les usages, les médias et l'IA.</p>
       <div class="cta">
         <a class="btn" href="#projets">Voir mes projets</a>
         <a class="btn btn-ghost" href="#contact">Me contacter</a>
@@ -48,7 +50,7 @@
           <a class="link" href="#" target="_blank" rel="noopener">Syllabus →</a>
         </article>
         <article class="card">
-          <h3>Visualisations & data</h3>
+          <h3>Visualisations &amp; data</h3>
           <p>Sélection de graphiques et visualisations créés pour des analyses.</p>
           <a class="link" href="#" target="_blank" rel="noopener">Voir →</a>
         </article>
@@ -75,7 +77,8 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> Votre Nom — Portfolio.</p>
+      <!-- Footer name updated to Tristan -->
+      <p>© <span id="year"></span> Tristan — Portfolio.</p>
     </div>
   </footer>
 </body>
