Update social links: remove Mastodon and link Twitter to x.com/tristanmf

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <ul class="contact-list">
         <li><strong>Email</strong> : <a href="mailto:votre.email@example.com">votre.email@example.com</a></li>
         <li><strong>GitHub</strong> : <a href="https://github.com/" target="_blank" rel="noopener">github.com/tonpseudo</a></li>
-        <li><strong>Réseaux</strong> : <a href="#" target="_blank" rel="noopener">Twitter</a> · <a href="#" target="_blank" rel="noopener">Mastodon</a></li>
+        <li><strong>Réseaux</strong> : <a href="https://x.com/tristanmf" target="_blank" rel="noopener">Twitter</a></li>
       </ul>
     </section>
   </main>
