Add profile photo and update À propos section with detailed bio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
+  <!-- Inline style for profile image with rounded corners -->
+  <style>
+    .profile-pic {
+      border-radius: 50%;
+      max-width: 150px;
+      height: auto;
+      display: block;
+      margin: 1rem auto;
+    }
+  </style>
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -59,9 +69,10 @@
 
     <section id="apropos" class="container section">
       <h2>À propos</h2>
+    <!-- Portrait image inserted for a personal touch -->
+    <img src="profile.jpg" alt="Portrait de Tristan Mendès France" class="profile-pic" />
       <p>
-        Je travaille sur l'impact des technologies, l'IA générative et la culture en ligne.
-        Ici, je rassemble une sélection de projets, publications et interventions.
+        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris. Il enseigne aussi au CELSA et à la Sorbonne‑Nouvelle où il donne des cours sur les nouvelles cultures numériques. Journaliste, chroniqueur, essayiste et réalisateur travaillant dans le numérique, il coanime le podcast&nbsp;« Complorama » sur France&nbsp;Info. Il est également responsable de l’initiative Stop Hate Money visant à démonétiser la haine en ligne et collabore au projet Conspiracy&nbsp;Watch. Ses interventions portent sur l’impact des technologies, l’IA générative et la culture en ligne.
       </p>
     </section>
 
