--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
   <main id="top">
     <section class="hero container">
       <div class="hero-text">
-        <h1>Bonjour, je suis <span class="accent">Tristan</span>.</h1>
-        <p class="lead">Journaliste &amp; enseignant — cultures numériques. J'analyse les usages, les médias et l'IA.</p>
+        <!-- Updated hero heading to remove the first‑person phrasing and use full name -->
+        <h1><span class="accent">Tristan Mendès France</span></h1>
+        <!-- Neutral tagline describing areas of expertise -->
+        <p class="lead">Spécialiste des cultures numériques et des radicalités en ligne. Enseignant et observateur.</p>
         <div class="cta">
           <a class="btn" href="#projets">Voir mes projets</a>
           <a class="btn btn-ghost" href="#contact">Me contacter</a>
@@ -69,17 +71,17 @@
       <div class="grid cards">
         <article class="card">
           <h3>Complorama</h3>
-          <p>Podcast qui explore le complotisme et la désinformation.</p>
+          <p>Podcast de France&nbsp;Info qui explore le complotisme et les désinformations.</p>
           <a class="link" href="https://www.radiofrance.fr/franceinfo/podcasts/complorama" target="_blank" rel="noopener">Écouter →</a>
         </article>
         <article class="card">
-          <h3>Cours — Cultures numériques</h3>
-          <p>Programme universitaire mêlant théorie, ateliers et projets.</p>
-          <a class="link" href="#" target="_blank" rel="noopener">Syllabus →</a>
+          <h3>Antidote</h3>
+          <p>Chroniques sur France&nbsp;Inter qui analysent l'actualité de la désinformation.</p>
+          <a class="link" href="https://www.radiofrance.fr/franceinter/podcasts/antidote" target="_blank" rel="noopener">Découvrir →</a>
         </article>
         <article class="card">
           <h3>Internet — Une infographie</h3>
-          <p>Mon livre publié chez CNRS Éditions.</p>
+          <p>Ouvrage publié chez CNRS Éditions qui explore l'impact du numérique sur nos sociétés à travers des infographies.</p>
           <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir →</a>
         </article>
       </div>
@@ -88,7 +90,7 @@
     <section id="apropos" class="container section">
       <h2>À propos</h2>
       <p>
-        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris. Il enseigne aussi au CELSA et à la Sorbonne‑Nouvelle où il donne des cours sur les nouvelles cultures numériques. Journaliste, chroniqueur, essayiste et réalisateur travaillant dans le numérique, il coanime le podcast&nbsp;« Complorama » sur France&nbsp;Info. Il est également responsable de l’initiative Stop Hate Money visant à démonétiser la haine en ligne et collabore au projet Conspiracy&nbsp;Watch. Ses interventions portent sur l’impact des technologies, l’IA générative et la culture en ligne.
+        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au&nbsp;CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast&nbsp;« Complorama » sur France&nbsp;Info et tient les chroniques&nbsp;« Antidote » sur France&nbsp;Inter. Il collabore à l’Observatoire du conspirationnisme&nbsp;(Conspiracy&nbsp;Watch). Ses interventions portent sur l’impact des technologies, l’IA générative et la culture en ligne.
       </p>
     </section>
 
