Update projects and biography: add Observatoire du conspirationnisme, Les Déconspirateurs and interventions boxes; remove Antidote and update bio accordingly.

--- a/index.html
+++ b/index.html
@@ -90,14 +90,24 @@
           <a class="link" href="https://www.radiofrance.fr/franceinfo/podcasts/complorama" target="_blank" rel="noopener">Écouter →</a>
         </article>
         <article class="card">
-          <h3>Antidote</h3>
-          <p>Chroniques sur France&nbsp;Inter qui analysent l'actualité de la désinformation.</p>
-          <a class="link" href="https://www.radiofrance.fr/franceinter/podcasts/antidote" target="_blank" rel="noopener">Découvrir →</a>
+          <h3>Observatoire du conspirationnisme</h3>
+          <p>Site de l’Observatoire du conspirationnisme, qui édite Conspiracy Watch et décrypte l’actualité de la complosphère.</p>
+          <a class="link" href="https://www.conspiracywatch.info" target="_blank" rel="noopener">Explorer →</a>
         </article>
         <article class="card">
-          <h3>Internet — Une infographie</h3>
-          <p>Ouvrage publié chez CNRS Éditions qui explore l'impact du numérique sur nos sociétés à travers des infographies.</p>
+          <h3>Les Déconspirateurs</h3>
+          <p>Émission YouTube qui analyse le phénomène de la complosphère et déconstruit les récits conspirationnistes.</p>
+          <a class="link" href="https://www.youtube.com/playlist?list=PLjzrEyZoLrso6n-zhX1NCFx4RM1GX_YVz" target="_blank" rel="noopener">Regarder →</a>
+        </article>
+        <article class="card">
+          <h3>Internet — Une infographie</h3>
+          <p>Ouvrage publié chez CNRS Éditions qui explore l’impact du numérique sur nos sociétés à travers des infographies.</p>
           <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir →</a>
+        </article>
+        <article class="card">
+          <h3>Conférences & interventions</h3>
+          <p>Conférences et consultations sur les technologies et usages émergents, l’intelligence artificielle et les questions d’extrémisme en ligne.</p>
+          <a class="link" href="#contact">Me contacter →</a>
         </article>
       </div>
     </section>
@@ -105,7 +115,7 @@
     <section id="apropos" class="container section">
       <h2>À propos</h2>
       <p>
-        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au&nbsp;CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast&nbsp;« Complorama » sur France&nbsp;Info et tient les chroniques&nbsp;« Antidote » sur France&nbsp;Inter. Il collabore à l’Observatoire du conspirationnisme&nbsp;(Conspiracy&nbsp;Watch). Ses interventions portent sur l’impact des technologies, l’IA générative et la culture en ligne.
+        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au&nbsp;CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast&nbsp;« Complorama » sur France&nbsp;Info, collabore à l’Observatoire du conspirationnisme&nbsp;(Conspiracy&nbsp;Watch) et participe à l’émission&nbsp;« Les&nbsp;Déconspirateurs ». Ses interventions portent sur l’impact des technologies, l’intelligence artificielle générative et l’extrémisme en ligne.
       </p>
     </section>
 
