Re-add Antidote card and adjust spacing for card headings; update CSS accordingly.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       height: 100%;
       border: none;
     }
+
+    /* Add spacing above card headings so titles are not flush with the top of the card */
+    .card h3 {
+      margin-top: 0.5rem;
+    }
   </style>
   <script defer src="script.js"></script>
 </head>
@@ -88,6 +93,11 @@
           <h3>Complorama</h3>
           <p>Podcast de France&nbsp;Info qui explore le complotisme et les désinformations.</p>
           <a class="link" href="https://www.radiofrance.fr/franceinfo/podcasts/complorama" target="_blank" rel="noopener">Écouter →</a>
+        </article>
+        <article class="card">
+          <h3>Antidote</h3>
+          <p>Chroniques sur France&nbsp;Inter qui analysent l’actualité de la désinformation.</p>
+          <a class="link" href="https://www.radiofrance.fr/franceinter/podcasts/antidote" target="_blank" rel="noopener">Découvrir →</a>
         </article>
         <article class="card">
           <h3>Observatoire du conspirationnisme</h3>
