--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
@@ -64,7 +65,8 @@
       <nav class="nav">
         <a href="#projets">Projets</a>
         <a href="#apropos">À propos</a>
-        <a href="#contact">Contact</a>
+        <a href="#c
+          ontact">Contact</a>
       </nav>
       <button id="themeToggle" aria-label="Basculer le thème">☼</button>
     </div>
@@ -85,6 +87,7 @@
       <!-- Portrait moved to top right of hero -->
       <img src="profile.jpg" alt="Portrait de Tristan Mendès France" class="profile-pic hero-pic" />
     </section>
+
 
     <section id="projets" class="container section">
       <h2>Projets récents</h2>
@@ -110,6 +113,7 @@
           <a class="link" href="https://www.youtube.com/playlist?list=PLjzrEyZoLrso6n-zhX1NCFx4RM1GX_YVz" target="_blank" rel="noopener">Regarder →</a>
         </article>
         <article class="card">
+
           <h3>Internet — Une infographie</h3>
           <p>Ouvrage publié chez CNRS Éditions qui explore l’impact du numérique sur nos sociétés à travers des infographies.</p>
           <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir →</a>
@@ -134,10 +138,8 @@
       <!-- Embedded Google Form for contact (uses an iframe) -->
       <p>Envoyez‑moi un message grâce à ce formulaire&nbsp;:</p>
       <div class="iframe-box">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSezLWfH7lfvSX9-I5O6zHR94e3JPL9i4CnDd1f9mb1B_2kClQ/viewform?embedded=true">Chargement…</iframe>
-      </div>
-      <div class="social">
-        <p>Réseaux sociaux : <a href="https://x.com/tristanmf" target="_blank" rel="noopener">Twitter</a></p>
+        <ifra
+          me src="https://docs.google.com/forms/d/e/1FAIpQLSezLWfH7lfvSX9-I5O6zHR94e3JPL9i4CnDd1f9mb1B_2kClQ/viewform?embedded=true">Chargement…</iframe>
       </div>
     </section>
   </main>
