--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
@@ -53,7 +52,28 @@
 
     /* Add spacing above card headings so titles are not flush with the top of the card */
     .card h3 {
-      margin-top: 0.5rem;
+      /* Increase top margin so the title doesn’t touch the card’s top border */
+      margin-top: 0.8rem;
+    }
+
+    /* Social icons styling for footer section */
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1.5rem;
+    }
+    .social-icons a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+    .social-icons a:hover {
+      color: var(--text);
+    }
+    .social-icons svg {
+      width: 32px;
+      height: 32px;
+      fill: currentColor;
     }
   </style>
   <script defer src="script.js"></script>
@@ -65,8 +85,7 @@
       <nav class="nav">
         <a href="#projets">Projets</a>
         <a href="#apropos">À propos</a>
-        <a href="#c
-          ontact">Contact</a>
+        <a href="#contact">Contact</a>
       </nav>
       <button id="themeToggle" aria-label="Basculer le thème">☼</button>
     </div>
@@ -78,7 +97,7 @@
         <!-- Updated hero heading to remove the first‑person phrasing and use full name -->
         <h1><span class="accent">Tristan Mendès France</span></h1>
         <!-- Neutral tagline describing areas of expertise -->
-        <p class="lead">Spécialiste des cultures numériques et des radicalités en ligne. Enseignant et observateur.</p>
+        <p class="lead">Spécialiste des cultures numériques et des radicalités en ligne. Enseignant et observateur des extrêmes en ligne.</p>
         <div class="cta">
           <a class="btn" href="#projets">Voir mes projets</a>
           <a class="btn btn-ghost" href="#contact">Me contacter</a>
@@ -87,7 +106,6 @@
       <!-- Portrait moved to top right of hero -->
       <img src="profile.jpg" alt="Portrait de Tristan Mendès France" class="profile-pic hero-pic" />
     </section>
-
 
     <section id="projets" class="container section">
       <h2>Projets récents</h2>
@@ -113,7 +131,6 @@
           <a class="link" href="https://www.youtube.com/playlist?list=PLjzrEyZoLrso6n-zhX1NCFx4RM1GX_YVz" target="_blank" rel="noopener">Regarder →</a>
         </article>
         <article class="card">
-
           <h3>Internet — Une infographie</h3>
           <p>Ouvrage publié chez CNRS Éditions qui explore l’impact du numérique sur nos sociétés à travers des infographies.</p>
           <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir →</a>
@@ -138,8 +155,36 @@
       <!-- Embedded Google Form for contact (uses an iframe) -->
       <p>Envoyez‑moi un message grâce à ce formulaire&nbsp;:</p>
       <div class="iframe-box">
-        <ifra
-          me src="https://docs.google.com/forms/d/e/1FAIpQLSezLWfH7lfvSX9-I5O6zHR94e3JPL9i4CnDd1f9mb1B_2kClQ/viewform?embedded=true">Chargement…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSezLWfH7lfvSX9-I5O6zHR94e3JPL9i4CnDd1f9mb1B_2kClQ/viewform?embedded=true">Chargement…</iframe>
+      </div>
+      <div class="social-icons">
+        <!-- Social media icons with links -->
+        <a href="https://www.facebook.com/tristan.mendes.france" target="_blank" rel="noopener" aria-label="Facebook">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
+          </svg>
+        </a>
+        <a href="https://www.instagram.com/tristanmf/" target="_blank" rel="noopener" aria-label="Instagram">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"></path>
+          </svg>
+        </a>
+        <a href="http://www.linkedin.com/in/tristanmf" target="_blank" rel="noopener" aria-label="LinkedIn">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"></path>
+          </svg>
+        </a>
+        <a href="https://x.com/tristanmf" target="_blank" rel="noopener" aria-label="Twitter">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"></path>
+          </svg>
+        </a>
+        <!-- Added Bluesky social icon and link -->
+        <a href="https://bsky.app/profile/tmf.bsky.social" target="_blank" rel="noopener" aria-label="Bluesky">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+            <path d="M3.468 1.948C5.303 3.325 7.276 6.118 8 7.616c.725-1.498 2.698-4.29 4.532-5.668C13.855.955 16 .186 16 2.632c0 .489-.28 4.105-.444 4.692-.572 2.04-2.653 2.561-4.504 2.246 3.236.551 4.06 2.375 2.281 4.2-3.376 3.464-4.852-.87-5.23-1.98-.07-.204-.103-.3-.103-.218 0-.081-.033.014-.102.218-.379 1.11-1.855 5.444-5.231 1.98-1.778-1.825-.955-3.65 2.28-4.2-1.85.315-3.932-.205-4.503-2.246C.28 6.737 0 3.12 0 2.632 0 .186 2.145.955 3.468 1.948" />
+          </svg>
+        </a>
       </div>
     </section>
   </main>
