--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Title updated to use Tristan -->
   <title>Portfolio — Tristan</title>
-  <meta name="description" content="Portfolio — projets, bio et contact." />
+  <meta name="description" content="Portfolio — projets, bio et contacts." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -35,13 +35,22 @@
       margin-left: 1rem;
     }
 
+    /* Style for images inside project cards */
+    .card img {
+      width: 200px;
+      border-radius: 8px;
+      margin-bottom: 0.5rem;
+      height: auto;
+      display: block;
+    }
+
     /* Styles for embedded Google Form contact section */
     .iframe-box {
       position: relative;
       width: 100%;
       /* Use a proportional padding to control height; adjust as needed */
       /* Reduce vertical space to avoid large empty area under the form */
-      padding-top: 80%;
+      padding-top: 60%;
       /* Match the form container background to the site surface color */
       background-color: var(--surface);
       border-radius: 8px;
@@ -90,7 +99,12 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="#top">TOP</a>
+      <!-- Replace the plain text logo with an arrow pointing up -->
+      <a class="logo" href="#top" aria-label="Retour en haut">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" fill="currentColor">
+          <path d="M8 3.293l5.646 5.647-1.414 1.414L8 6.414l-4.232 4.232-1.414-1.414L8 3.293z" />
+        </svg>
+      </a>
       <nav class="nav">
         <a href="#projets">Projets</a>
         <a href="#apropos">À propos</a>
@@ -114,11 +128,6 @@
         </div>
     <!-- Social media icons moved here from contact section -->
     <div class="social-icons">
-         <a href="http://www.linkedin.com/in/tristanmf" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-          <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
-        </svg>
-      </a>
       <a href="https://www.facebook.com/tristan.mendes.france" target="_blank" rel="noopener" aria-label="Facebook">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
@@ -129,7 +138,11 @@
           <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
         </svg>
       </a>
-   
+      <a href="http://www.linkedin.com/in/tristanmf" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+          <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+        </svg>
+      </a>
       <a href="https://x.com/tristanmf" target="_blank" rel="noopener" aria-label="Twitter">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
           <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15" />
@@ -150,34 +163,47 @@
       <h2>Projets récents</h2>
       <div class="grid cards">
         <article class="card">
+          <!-- Complorama podcast card with image -->
+          <img src="complorama.jpg" alt="Complorama" />
           <h3>Complorama</h3>
           <p>Podcast de France&nbsp;Info qui explore le complotisme et les désinformations.</p>
-          <a class="link" href="https://www.radiofrance.fr/franceinfo/podcasts/complorama" target="_blank" rel="noopener">Écouter →</a>
+          <a class="link" href="https://www.radiofrance.fr/franceinfo/podcasts/complorama" target="_blank" rel="noopener">Écouter&nbsp;→</a>
         </article>
         <article class="card">
+          <!-- Antidote chronicles card with image -->
+          <img src="antidote.jpg" alt="Antidote" />
           <h3>Antidote</h3>
           <p>Chroniques sur France&nbsp;Inter qui analysent l’actualité de la désinformation.</p>
-          <a class="link" href="https://www.radiofrance.fr/franceinter/podcasts/antidote" target="_blank" rel="noopener">Découvrir →</a>
+          <a class="link" href="https://www.radiofrance.fr/franceinter/podcasts/antidote" target="_blank" rel="noopener">Découvrir&nbsp;→</a>
         </article>
         <article class="card">
+          <!-- Observatoire du conspirationnisme card with image -->
+          <img src="conspiracywatch.jpg" alt="Conspiracy Watch" />
           <h3>Observatoire du conspirationnisme</h3>
-          <p>Site de l’Observatoire du conspirationnisme, qui édite Conspiracy Watch et décrypte l’actualité de la complosphère.</p>
-          <a class="link" href="https://www.conspiracywatch.info" target="_blank" rel="noopener">Explorer →</a>
+          <p>Site de l’Observatoire du conspirationnisme, qui édite Conspiracy&nbsp;Watch et décrypte l’actualité de la complosphère.</p>
+          <a class="link" href="https://www.conspiracywatch.info" target="_blank" rel="noopener">Explorer&nbsp;→</a>
         </article>
         <article class="card">
+          <!-- Les Déconspirateurs card with image -->
+          <img src="deconspirateur.jpg" alt="Les Déconspirateurs" />
           <h3>Les Déconspirateurs</h3>
           <p>Émission YouTube qui analyse le phénomène de la complosphère et déconstruit les récits conspirationnistes.</p>
-          <a class="link" href="https://www.youtube.com/playlist?list=PLjzrEyZoLrso6n-zhX1NCFx4RM1GX_YVz" target="_blank" rel="noopener">Regarder →</a>
+          <a class="link" href="https://www.youtube.com/playlist?list=PLjzrEyZoLrso6n-zhX1NCFx4RM1GX_YVz" target="_blank" rel="noopener">Regarder&nbsp;→</a>
         </article>
         <article class="card">
+          <!-- Internet — Une infographie card with image -->
+          <img src="infographie.jpg" alt="Internet — Une infographie" />
           <h3>Internet — Une infographie</h3>
           <p>Ouvrage publié chez CNRS Éditions qui explore l’impact du numérique sur nos sociétés à travers des infographies.</p>
-          <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir →</a>
+          <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir&nbsp;→</a>
         </article>
+        <!-- New card replacing Conférences & interventions: CIPIP & Vérificateurs -->
         <article class="card">
-          <h3>Conférences & interventions</h3>
-          <p>Conférences et consultations sur les technologies et usages émergents, l’intelligence artificielle et les questions d’extrémisme en ligne.</p>
-          <a class="link" href="#contact">Me contacter →</a>
+          <img src="france-medias-monde.jpg" alt="France Médias Monde" />
+          <h3>CIPIP & Vérificateurs</h3>
+          <p>Membre du Comité d’indépendance, pluralisme et intégrité de l’information (CIPIP) de France&nbsp;Médias&nbsp;Monde et consultant pour l’émission&nbsp;« Les Vérificateurs » sur LCI.</p>
+          <a class="link" href="https://www.francemediasmonde.com/fr/nos-engagements/deontologie/" target="_blank" rel="noopener">CIPIP&nbsp;→</a>
+          <a class="link" href="https://www.tf1info.fr/emissions/lci/verificateurs-14293/" target="_blank" rel="noopener">Les Vérificateurs&nbsp;→</a>
         </article>
       </div>
     </section>
@@ -185,7 +211,7 @@
     <section id="apropos" class="container section">
       <h2>À propos</h2>
       <p>
-        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au&nbsp;CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast&nbsp;« Complorama » sur France&nbsp;Info, collabore à l’Observatoire du conspirationnisme&nbsp;(Conspiracy&nbsp;Watch) et participe à l’émission&nbsp;« Les&nbsp;Déconspirateurs ». Ses interventions portent sur l’impact des technologies émergentes, l’intelligence artificielle et l’extrémisme en ligne.
+        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au&nbsp;CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast&nbsp;« Complorama » sur France&nbsp;Info, collabore à l’Observatoire du conspirationnisme&nbsp;(Conspiracy&nbsp;Watch) et participe à l’émission&nbsp;« Les&nbsp;Déconspirateurs ». Conférencier et consultant, il intervient sur l’impact du numérique et de l’intelligence&nbsp;artificielle, ainsi que sur l’extrême en ligne, et peut être contacté pour des interventions.
       </p>
     </section>
 
