Replace Internet card image, reorder CHIPIP and Les Verificateurs cards, and remove second tagline line.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <h1><span class="accent">Tristan Mendès France</span></h1>
         <!-- Neutral tagline describing areas of expertise -->
     <!-- Neutral tagline describing areas of expertise split across two lines -->
-    <p class="lead">Spécialiste des cultures numériques et des radicalités en ligne.<br>Enseignant et observateur de l’extrémisme en ligne.</p>
+    <p class="lead">Spécialiste des cultures numériques et des radicalités en ligne.</p>
         <div class="cta">
           <a class="btn" href="#projets">Voir mes projets</a>
           <a class="btn btn-ghost" href="#contact">Me contacter</a>
@@ -226,11 +226,21 @@
         <!-- Internet — Une infographie card -->
         <article class="card">
           <a href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">
-            <img src="infographie.jpg" alt="Internet — Une infographie" />
+            <img src="internet_infographie_cnrs.png" alt="Internet — Une infographie" />
           </a>
           <h3>Internet — Une infographie</h3>
           <p>Ouvrage publié chez CNRS Éditions qui explore l’impact du numérique sur nos sociétés à travers des infographies.</p>
           <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir&nbsp;→</a>
+        </article>
+        <!-- CHIPIP card -->
+        <!-- Les Vérificateurs card -->
+        <article class="card">
+          <a href="https://www.tf1info.fr/emissions/lci/verificateurs-14293/" target="_blank" rel="noopener">
+            <img src="lci.jpg" alt="Les Vérificateurs" />
+          </a>
+          <h3>Les Vérificateurs</h3>
+          <p>Consultant pour l’émission&nbsp;« Les Vérificateurs » sur LCI qui vérifie les informations et lutte contre la désinformation.</p>
+          <a class="link" href="https://www.tf1info.fr/emissions/lci/verificateurs-14293/" target="_blank" rel="noopener">Regarder&nbsp;→</a>
         </article>
         <!-- CHIPIP card -->
         <article class="card">
@@ -240,15 +250,6 @@
           <h3>CHIPIP</h3>
           <p>Membre du Comité d’indépendance, pluralisme et intégrité de l’information (CHIPIP) de France&nbsp;Médias&nbsp;Monde.</p>
           <a class="link" href="https://www.francemediasmonde.com/fr/nos-engagements/deontologie/" target="_blank" rel="noopener">En savoir plus&nbsp;→</a>
-        </article>
-        <!-- Les Vérificateurs card -->
-        <article class="card">
-          <a href="https://www.tf1info.fr/emissions/lci/verificateurs-14293/" target="_blank" rel="noopener">
-            <img src="lci.jpg" alt="Les Vérificateurs" />
-          </a>
-          <h3>Les Vérificateurs</h3>
-          <p>Consultant pour l’émission&nbsp;« Les Vérificateurs » sur LCI qui vérifie les informations et lutte contre la désinformation.</p>
-          <a class="link" href="https://www.tf1info.fr/emissions/lci/verificateurs-14293/" target="_blank" rel="noopener">Regarder&nbsp;→</a>
         </article>
         <!-- Conférencier & Consultant card with distinct style -->
         <article class="card special">
