--- a/index.html
+++ b/index.html
@@ -203,11 +203,12 @@ e<!DOCTYPE html>
           <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
         </svg>
       </a>
-      <a href="https://x.com/tristanmf" target="_blank" rel="noopener" aria-label="
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-              <path d="M12.6 .75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601 .75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
-5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15" />
-        </svg>
+      <a href="https://x.com/tristanmf" target="_blank" rel="noopener" aria-label="X
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+        <path d="M12.6 .75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601 .75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+      </svg>
+    </a>
+
       </a>
       <a href="https://bsky.app/profile/tmf.bsky.social" target="_blank" rel="noopener" aria-label="Bluesky">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
